UPDATE MASTER DATA -update infra damages roads,brdges, emabnkments

--- a/Sources/FRIMS/scripts/disaggregated_data_dump_process_infra.ipynb
+++ b/Sources/FRIMS/scripts/disaggregated_data_dump_process_infra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "c5a30383",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "06681810",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "b4177686",
    "metadata": {},
    "outputs": [],
@@ -42,22 +42,175 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel(data_path+'FRIMS_Inf_Damage_Data_21_july_2023.xlsx',\n",
-    "                   sheet_name=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "f6dacbe0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                   sheet_name=0)\n",
     "df = df.rename(columns = {'Revenue Circle Id': 'RC_Id'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
+   "id": "a15a816e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Report_Date</th>\n",
+       "      <th>District_Id</th>\n",
+       "      <th>District_Name</th>\n",
+       "      <th>DFC_Id</th>\n",
+       "      <th>RC_Id</th>\n",
+       "      <th>Block_Name</th>\n",
+       "      <th>Infrastructure_Damage_Type</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Remark</th>\n",
+       "      <th>Department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-05-15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Baksa</td>\n",
+       "      <td>30</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Jalah</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-05-15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Nalbari</td>\n",
+       "      <td>14</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>Barkhetri</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-05-15</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Chirang</td>\n",
+       "      <td>105</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>Bengtal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-05-15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Nalbari</td>\n",
+       "      <td>140</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>Nalbari</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-05-15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Baksa</td>\n",
+       "      <td>28</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>Barnagar RC part</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Report_Date  District_Id District_Name  DFC_Id  RC_Id        Block_Name  \\\n",
+       "0  2021-05-15            2         Baksa      30   18.0             Jalah   \n",
+       "1  2021-05-15           15       Nalbari      14  145.0         Barkhetri   \n",
+       "2  2021-05-15           34       Chirang     105   45.0           Bengtal   \n",
+       "3  2021-05-15           15       Nalbari     140  144.0           Nalbari   \n",
+       "4  2021-05-15            2         Baksa      28  178.0  Barnagar RC part   \n",
+       "\n",
+       "  Infrastructure_Damage_Type Name Location  Longitude  Latitude Remark  \\\n",
+       "0                        NaN  NaN      NaN        NaN       NaN    NaN   \n",
+       "1                        NaN  NaN      NaN        NaN       NaN    NaN   \n",
+       "2                        NaN  NaN      NaN        NaN       NaN    NaN   \n",
+       "3                        NaN  NaN      NaN        NaN       NaN    NaN   \n",
+       "4                        NaN  NaN      NaN        NaN       NaN    NaN   \n",
+       "\n",
+       "  Department  \n",
+       "0        NaN  \n",
+       "1        NaN  \n",
+       "2        NaN  \n",
+       "3        NaN  \n",
+       "4        NaN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Updated dataset\n",
+    "df = pd.read_csv(data_path + 'Infrastructure Damage.csv')\n",
+    "df['Report_Date'] = pd.to_datetime(df['Report_Date'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "67151f79",
    "metadata": {},
    "outputs": [],
@@ -67,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "2330e576",
    "metadata": {},
    "outputs": [
@@ -77,7 +230,7 @@
        "set()"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,37 +242,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "a724f18f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['month'] = df['Report Date'].dt.month\n",
+    "df['month'] = df['Report_Date'].dt.month\n",
     "df['month'] = df.month.map(\"{:02}\".format)\n",
-    "df['year'] = df['Report Date'].dt.year"
+    "df['year'] = df['Report_Date'].dt.year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0645a641",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "7f906f9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "infra_damages_df = df.groupby(['year', 'month', 'object_id', 'Type'])[['Id']].count().reset_index()"
+    "infra_damages_df = df.groupby(['year', 'month', 'object_id', 'Infrastructure_Damage_Type'])[['RC_Id']].count().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "54bbd220",
    "metadata": {},
    "outputs": [],
@@ -129,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "004999f7",
    "metadata": {},
    "outputs": [],
@@ -139,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "6412961b",
    "metadata": {},
    "outputs": [],
@@ -149,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "5fa7abb3",
    "metadata": {
     "scrolled": true
@@ -193,8 +338,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ceea980a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Roads', 'Embankments affected', 'Bridge', 'Embankment breached'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea49db7",
    "metadata": {},
    "outputs": [],
    "source": []
